--- a/extensions/feishu/package.json
+++ b/extensions/feishu/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@larksuiteoapi/node-sdk": "^1.58.0",
     "@sinclair/typebox": "0.34.48",
+    "music-metadata": "^11.11.2",
     "zod": "^4.3.6"
   },
   "devDependencies": {
