--- a/extensions/stateful-ssh/package.json
+++ b/extensions/stateful-ssh/package.json
@@ -8,8 +8,8 @@
     "ssh2": "^1.15.0"
   },
   "devDependencies": {
-    "openclaw": "workspace:*",
-    "@types/ssh2": "^1.15.0"
+    "@types/ssh2": "^1.15.0",
+    "openclaw": "workspace:*"
   },
   "openclaw": {
     "extensions": [
